deleted all by "Strategic Defense Initiative"; modified other def (from Wikipedia) and moved it to etym <Star Wars#63890>

--- a/wiki/Star_Wars.wikitext
+++ b/wiki/Star_Wars.wikitext
@@ -1,14 +1,16 @@
 ==English==
+===Etymology===
+#Named after the original name of the science fantasy [[motion picture]] [[w:Star Wars|Star Wars: Episode IV: A New Hope]].
 
-===Proper Noun===
+===Proper noun===
 '''Star Wars'''
 
-#The name of a series of science fantasy motion pictures, a literary franchise, and a video game series based on the ideas of filmmaker and writer George Lucas, consisting of numerous [[prequel]]s, [[sequel]]s, and [[literary]] adaptations.
-#The original name of the motion picture ''Star Wars: Episode IV: A New Hope''.
-#[[Strategic Defense Initiative]].
+#Another name for the [[Strategic Defense Initiative]].
 
+<!--These translations should be for the Strategic Defense Initiative only
 ===Translations===
-*[[Japanese]]: [[スター・ウォーズ]] (Sutaa Wouzu)
+*Japanese: [[スター・ウォーズ]] (Sutaa Wouzu)
+-->
 
-===Further Reading===
-*[http://en.wikipedia.org/wiki/Star_Wars Wikipedia article on 'Star Wars']
+===See also===
+*[[w:Strategic Defense Initiative|Wikipedia article on the Strategic Defense Initiative]]
