fmt; revised def <old fart#63891>

--- a/wiki/old_fart.wikitext
+++ b/wiki/old_fart.wikitext
@@ -1,1 +1,5 @@
-A pejorative reference to an elderly person.
+==English==
+===Noun===
+'''old fart''' (''plural'' '''old farts''')
+
+#(''[[pejorative]]'') An elderly person who holds views that are considered old-fashioned.
