--- a/wiki/head.wikitext
+++ b/wiki/head.wikitext
@@ -1,3 +1,4 @@
+==English==
 ===Etymology===
 
 From Middle English, from Old English [[heafod|hēafod]], which derives from Germanic [[khaubuthan]], from indo-European [[kaput-]].
@@ -9,103 +10,194 @@ Related Germanic words are old German ''houbit'' (Haupt), middle Dutch ''h&ocirc
 ===Noun===
 
 # The part of the [[body]] of a living [[organism]] or [[representation]] thereof which contains the [[brain]], [[eye]]s, [[ear|ears]], [[mouth]], and [[nose]].  From ''The Marvelous Land of Oz'', L. Frank Baum: "...when [[all]] was [[ready]] Tip put on the [[pumpkin]] head, [[press|pressing]] it well down onto the [[neck]], and found that it [[fit|fitted]] very well." [http://www.literature.org/authors/baum-l-frank/the-marvelous-land-of-oz/chapter-01.html]
-#:
-#:'''Translations'''
-#:*[[Basque]]: [[buru]], [[kasko]]
-#:*[[Breton]]: [[penn]] ''m'' -où ''pl''
-#:*[[Catalan]]: [[cap]] ''m''
-#:*Chinese: [[頭]]/[[头]] (tou), [[頭腦]]/[[头脑]] (tounao)
-#:*[[Dutch]]: [[hoofd]] (of person or horse), [[kop]] (of animal)
-#:*[[Estonian]]: [[pea#Estonian|pea]]
-#:*[[Finnish]]: [[pää]], [[nuppi]], [[hamara]]
-#:*[[German]]: Kopf [[:de:Kopf|(de)]] ''m''; [[Haupt]] ''n'' (rarely used)
-#:*[[Guaraní]]: [[akã]]
-#:*[[Hawaiian]]: [[poʻo]]
-#:*[[Hebrew]] [[ראש]]
-#:*[[Icelandic]]: [[höfuð]] (of person), [[haus]] (of animal) 
-#:*[[Indonesian]]: [[kepala]]
-#:*[[Interlingua]]: [[capite]]
-#:*[[Irish]]: [[ceann]] ''m''
-#:*[[Japanese]]: [[頭]] ([[あたま]], atama)
-#:*[[Korean]]: [[머리]] (meori)
-#:*[[Lithuanian]]: [[galva]] ''f''
-#:*[[Low Saxon]]: [[kopp]]
-#:*[[Persian]]: [[سَر]] (sær)
-#:*[[Pitjantjatjara]]: [[kata]]
-#:*[[Polish]]: [[głowa]] ''f''
-#:*[[Portuguese]]: [[cabeça]] ''f''
-#:*[[Romanica]]: [[capite]] ''f'', [[testa]] ''f''
-#:*[[Slovak]]: [[hlava]] ''f''
-#:*[[Slovenian]]: [[glava]] ''f''
-#:*[[Swedish]]: [[huvud]]
-#:*[[Tupinambá]]: [[akanga]]
-#:*[[Welsh]]: [[pen]] ''m''
-#:
 # [[Leader]], [[chief]], as in ''Head of the department''
-#:
-#:'''Translations'''
-#:*[[Basque]]: [[buruzagi]], [[buru]], [[nagusi]]
-#:*[[Breton]]: [[penn]] ''m'' -où ''pl''
-#:*[[Dutch]]: [[hoofd]] ''n'', [[baas]] ''m'', [[bazin]] ''f'', [[leider]] ''m'', [[leidster]] ''f'', [[chef]] ''m'', [[cheffin]] ''f'' (not used often)
-#:*[[Finnish]]: [[johtaja]], [[päällikkö]]
-#:*[[German]]: [[Leiter]] ''m'', [[Führer]] ''m'', [[Chef]] ''m''
-#:*[[Guaraní]]: [[mburuvicha]]
-#:*[[Indonesian]]: [[kepala]], [[pimpin|pemimpin]]
-#:*[[Interlingua]]: ''[[chef]]'', ''[[leader]]''
-#:*[[Japanese]]: [[指導者]] (しどうしゃ, shidōsha), [[頭]] ([[かしら]], kashira)
-#:*[[Lithuanian]]: [[galva]] ''f''; [[vadovas]] ''m'', [[vadovė]] ''f''
-#:*[[Low Saxon]]: [[baas]], ''m'',''f''
-#:*[[Polish]]: [[kierownik]] ''m'', [[kierowniczka]] ''f''
-#:*[[Portuguese]]: [[chefe]] ''m'' & ''f'', [[cabeça]] ''m'', [[líder]] ''m'' & ''f''
-#:*[[Romanica]]: ''[[chef]]'' ''f'', ''[[leader]]'' ''f''
-#:*[[Slovene]]: [[vodja]] ''m''
-#:*[[Swedish]]: [[ledare]], [[chef]]
-#:*[[Tupinambá]]: [[porubixaba]], [[ubixaba]] (t-)
-#:*[[Welsh]]: [[pen]] ''m''
 # [[Headmaster]] or [[headmistress]].
-#:*[[Swedish]]: [[rektor]]
 # ''[[Nautical terminology|Nautical]]'' The [[toilet]] or [[restroom]] aboard a [[ship]].
 # ''[[Nautical terminology|Nautical]]'' The [[top]] of a [[sail]].
 # The foam that forms on top of [[beer]] or other carbonated [[beverage]]s.
 # (''Vulgar'') [[Fellatio]], [[Oral sex]].  (Usually used in the phrase ''give head.'')
 # The end of a [[hammer]], [[axe]], or similar [[implement]] used for striking other objects.
-#:'''Translations'''
-#:*Lithuanian: [[galva]] ''f''
 # The blunt end of a [[nail]], [[screw]], [[tack]], [[pin]] or similar [[fastener]].
-#:'''Translations'''
-#:*Lithuanian: [[galvutė]] ''f''
-#:*Swedish: [[huvud]]
+
+====Translations====
+'''the part of the body'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*[[Basque]]: [[buru]], [[kasko]]
+*[[Breton]]: [[penn]] ''m'' -où ''pl''
+*[[Catalan]]: [[cap]] ''m''
+*Chinese: [[頭]]/[[头]] (tou), [[頭腦]]/[[头脑]] (tounao)
+*[[Dutch]]: [[hoofd]] (of person or horse), [[kop]] (of animal)
+*[[Estonian]]: [[pea#Estonian|pea]]
+*[[Finnish]]: [[pää]], [[nuppi]], [[hamara]]
+*[[German]]: Kopf [[:de:Kopf|(de)]] ''m''; [[Haupt]] ''n'' (rarely used)
+*[[Guaraní]]: [[akã]]
+*[[Hawaiian]]: [[poʻo]]
+*[[Hebrew]] [[ראש]]
+*[[Icelandic]]: [[höfuð]] (of person), [[haus]] (of animal) 
+*[[Indonesian]]: [[kepala]]
+*[[Interlingua]]: [[capite]]
+*[[Irish]]: [[ceann]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+*[[Japanese]]: [[頭]] ([[あたま]], atama)
+*[[Korean]]: [[머리]] (meori)
+*[[Lithuanian]]: [[galva]] ''f''
+*[[Low Saxon]]: [[kopp]]
+*[[Persian]]: [[سَر]] (sær)
+*[[Pitjantjatjara]]: [[kata]]
+*[[Polish]]: [[głowa]] ''f''
+*[[Portuguese]]: [[cabeça]] ''f''
+*[[Romanica]]: [[capite]] ''f'', [[testa]] ''f''
+*[[Slovak]]: [[hlava]] ''f''
+*[[Slovenian]]: [[glava]] ''f''
+*[[Swedish]]: [[huvud]]
+*[[Tupinambá]]: [[akanga]]
+*[[Welsh]]: [[pen]] ''m''
+|}
+|}
+
+'''leader or chief'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*[[Basque]]: [[buruzagi]], [[buru]], [[nagusi]]
+*[[Breton]]: [[penn]] ''m'' -où ''pl''
+*[[Dutch]]: [[hoofd]] ''n'', [[baas]] ''m'', [[bazin]] ''f'', [[leider]] ''m'', [[leidster]] ''f'', [[chef]] ''m'', [[cheffin]] ''f'' (not used often)
+*[[Finnish]]: [[johtaja]], [[päällikkö]]
+*[[German]]: [[Leiter]] ''m'', [[Führer]] ''m'', [[Chef]] ''m''
+*[[Guaraní]]: [[mburuvicha]]
+*[[Indonesian]]: [[kepala]], [[pimpin|pemimpin]]
+*[[Interlingua]]: ''[[chef]]'', ''[[leader]]''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+*[[Japanese]]: [[指導者]] (しどうしゃ, shidōsha), [[頭]] ([[かしら]], kashira)
+*[[Lithuanian]]: [[galva]] ''f''; [[vadovas]] ''m'', [[vadovė]] ''f''
+*[[Low Saxon]]: [[baas]], ''m'',''f''
+*[[Polish]]: [[kierownik]] ''m'', [[kierowniczka]] ''f''
+*[[Portuguese]]: [[chefe]] ''m'' & ''f'', [[cabeça]] ''m'', [[líder]] ''m'' & ''f''
+*[[Romanica]]: ''[[chef]]'' ''f'', ''[[leader]]'' ''f''
+*[[Slovene]]: [[vodja]] ''m''
+*[[Swedish]]: [[ledare]], [[chef]]
+*[[Tupinambá]]: [[porubixaba]], [[ubixaba]] (t-)
+*[[Welsh]]: [[pen]] ''m''
+|}
+|}
+
+'''headmaster/mistress'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+*[[Swedish]]: [[rektor]]
+|}
+|}
+
+'''end of hammer etc.'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Finnish: [[pää]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+*Lithuanian: [[galva]] ''f''
+|}
+|}
+
+'''the blunt end of a nail etc.'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Finnish: [[pää]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+*Lithuanian: [[galvutė]] ''f''
+*Swedish: [[huvud]]
+|}
+|}
 
 ===Verb===
 # To be in command of
-#:
-#:'''Translations'''
-#:*[[Basque]]: [[zuzendu]]
-#:*[[Breton]]: [[ren]]
-#:*[[Dutch]]: [[leiden]], [[aanvoeren]] 
-#:*[[Finnish]]: [[johtaa]]
-#:*[[German]]: [[führen]], [[leiten]] 
-#:*[[Hebrew]]: [[עמד בראש]]
-#:*[[Indonesian]]: [[pimpin|memimpin]]
-#:*[[Interlingua]]: [[commandar]], [[diriger]], [[leaderar]]
-#:*[[Japanese]]: [[指導する]] (しどうする, shidō-suru)
-#:*[[Low Saxon]]: [[kommandeern]], dat Seggen hebben
-#:*[[Polish]]: [[kierować]]
-#:*[[Portuguese]]: [[comandar]], [[dirigir]], [[liderar]]
-#:*[[Romanica]]: [[commandar]], [[diriger]], [[leaderar]]
-#:*[[Swedish]]: [[leda]]
-#:
 # To move into a [[special]] [[direction]]. ''heading towards something''
-#:'''Translations'''
-#:*[[Basque]]: [[zuzendu]]
-#:*[[Breton]]: [[skeiñ]] war-du
-#:*[[Dutch]]: ergens naar toe [[gaan]], een richting op [[gaan]]
-#:*[[Finnish]]: [[suunnata]]
-#:*[[German]]: [[ansteuern]], in eine [[Richtung]] [[gehen]], auf etwas [[zusteuern]]
-#:*[[Indonesian]]: [[tuju|menuju]]
-#:*[[Interlingua]]: [[diriger se]]
-#:*[[Japanese]]: [[向かう]] ([[むかう]], mukau)
-#:*[[Low Saxon]]: op to stüürn
-#:*[[Polish]]: [[kierować się]]
-#:*[[Portuguese]]: [[dirigir-se]], [[encaminhar-se]], [[rumar]]
-#:*[[Romanica]]: [[diriger se]]
+
+====Translations====
+'''to be in command of'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*[[Basque]]: [[zuzendu]]
+*[[Breton]]: [[ren]]
+*[[Dutch]]: [[leiden]], [[aanvoeren]] 
+*[[Finnish]]: [[johtaa]]
+*[[German]]: [[führen]], [[leiten]] 
+*[[Hebrew]]: [[עמד בראש]]
+*[[Indonesian]]: [[pimpin|memimpin]]
+*[[Interlingua]]: [[commandar]], [[diriger]], [[leaderar]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+*[[Japanese]]: [[指導する]] (しどうする, shidō-suru)
+*[[Low Saxon]]: [[kommandeern]], dat Seggen hebben
+*[[Polish]]: [[kierować]]
+*[[Portuguese]]: [[comandar]], [[dirigir]], [[liderar]]
+*[[Romanica]]: [[commandar]], [[diriger]], [[leaderar]]
+*[[Swedish]]: [[leda]]
+|}
+|}
+
+'''to move into a special direction'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*[[Basque]]: [[zuzendu]]
+*[[Breton]]: [[skeiñ]] war-du
+*[[Dutch]]: ergens naar toe [[gaan]], een richting op [[gaan]]
+*[[Finnish]]: [[suunnata]]
+*[[German]]: [[ansteuern]], in eine [[Richtung]] [[gehen]], auf etwas [[zusteuern]]
+*[[Indonesian]]: [[tuju|menuju]]
+*[[Interlingua]]: [[diriger se]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+*[[Japanese]]: [[向かう]] ([[むかう]], mukau)
+*[[Low Saxon]]: op to stüürn
+*[[Polish]]: [[kierować się]]
+*[[Portuguese]]: [[dirigir-se]], [[encaminhar-se]], [[rumar]]
+*[[Romanica]]: [[diriger se]]
+|}
+|}
