/* Translations */ formatting <goat#8122>

--- a/wiki/goat.wikitext
+++ b/wiki/goat.wikitext
@@ -14,6 +14,11 @@
 *to [[get one's goat]]
 
 ==== Translations ====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *Albanian: [[dhia]]
 *[[Aragonese]]: [[crapa]]
 *[[Basque]]: [[ahuntz]]
@@ -44,6 +49,11 @@
 *Indonesian: [[kambing]]
 *Irish: [[gabhar]]
 *Italian: [[capra]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *Japanese: [[やぎ]] (yagi)
 *Korean: [[염소]] (yeomso)
 *[[Javanese]]: [[wedus]]
@@ -76,5 +86,7 @@
 *Ukrainian: [[козел]] (kozel), [[цап]] (cap)
 *[[Upper Sorbian]]: [[koza]]
 *Welsh: [[gafr]]
+|}
+|}
 
 [[Category:English mammals]]
