--- a/wiki/louse.wikitext
+++ b/wiki/louse.wikitext
@@ -23,7 +23,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Albanian: [[morr]]
-*Arabic: [[قَمْلَة]] (qámlah) ''f'', [[قَمْلٌ]] (qámlun) ''plural''
+*Arabic: [[قملة|قَمْلَة]] (qámlah) ''f'', [[قمل|قَمْلٌ]] (qámlun) ''plural''
 *[[Bosnian]]: [[uš]] ''f'', [[vaš]] ''f'', [[gnjida]] ''f''
 *Bulgarian: [[въшка]] (väška) ''f''
 *CJK Characters: [[虱]]
@@ -46,7 +46,7 @@
 *Japanese: [[虱]] ([[シラミ]], shirami), [[寄生虫]] ([[きせいちゅう]], kiseichū)
 *Korean: [[이]] (i)
 *Lithuanian: [[utėlė]] ''f''
-*[[Persian]]: [[شِپِش]] (šepeš)
+*[[Persian]]: [[شپش|شِپِش]] (šepeš)
 *Polish: [[wesz]]
 *Portuguese: [[piolho]] ''m''
 *Romanian: [[păduche]] ''m''
@@ -66,7 +66,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Albanian: [[qelbanik]]
-*Arabic: [[سَافِلٌ اِبْنُ كَلْب]] (sáafil íbnu kalb) ''m''
+*Arabic: [[سافل ابن كلب|سَافِلٌ اِبْنُ كَلْب]] (sáafil íbnu kalb) ''m''
 *Bulgarian: [[гад]] (gad) ''m and f''
 *Dutch: (arme) [[luis]] ''m''
 *Finnish: [[luopio]], [[hylkiö]], [[epatto]]
