--- a/wiki/atheist.wikitext
+++ b/wiki/atheist.wikitext
@@ -5,7 +5,7 @@
 ===Noun===
 '''atheist''' (''plural'' '''atheists''')
 
-# A person who does not believe in any [[god]].
+# A person who lacks belief in any [[god]], or in some cases in any specific [[god]]
 
 ====Translations====
 {| border=0  width=100%
