--- a/wiki/agnosticism.wikitext
+++ b/wiki/agnosticism.wikitext
@@ -4,5 +4,4 @@ a- + gnostic + -ism
 Noun
 agnosticism
 
-the lack of knowledge in a specialized field
-the lack of knowledge of any gods
+the belief that knowledge of any gods is impossible.
