--- a/wiki/pronunciation.wikitext
+++ b/wiki/pronunciation.wikitext
@@ -1,3 +1,4 @@
+==English==
 ===Etymology===
 From Latin '''[[pronuntiatio]]''', noun of action from perfect passive participle '''[[pronuntiatus]]''', from verb ''[[pronuntiare]]'', ''[[proclaim]]'', from '''[[pro-]]''' ''for'' + '''[[nuntiare]]''' ''announce''.
 
@@ -14,6 +15,11 @@ See also:
 *[[Wiktionary:Pronunciation key]]
 
 ====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *[[Catalan]]: [[pronunciació]] ''f''
 *Chinese: [[发音]], [[發音]](fāyīn)
 *Danish: [[udtale]]
@@ -27,6 +33,11 @@ See also:
 *Indonesian: [[lafal]], [[cara]] [[baca]]
 *[[Interlingua]]: pronunciation
 *Italian: [[pronuncia]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *Japanese: [[発音]] (はつおん, hatsuon)
 *Korean: [[발음]] [發音] (baleum)
 *Latin: [[pronuntiatio]] ''nom.'', [[pronuntiationis]] ''gen.''
@@ -37,11 +48,15 @@ See also:
 *Russian: [[произношение]]
 *Spanish: [[pronunciación]] ''f''
 *Swedish: [[uttal]]
+|}
+|}
 
 ----
 
-==[[Interlingua]]==
-[pronuntsja'tsjon]
+==Interlingua==
+===Pronunciation===
+:[pronuntsja'tsjon]
+
 ===Noun===
 '''pronunciation'''
 
