--- a/wiki/pronunciation.wikitext
+++ b/wiki/pronunciation.wikitext
@@ -8,12 +8,6 @@ From Latin '''[[pronuntiatio]]''', noun of action from perfect passive participl
 ===Noun===
 #the way words are made to sound when spoken.
 
-See also: 
-*Wikipedia: [[en:SAMPA|SAMPA]]
-*Wikipedia: [[w:pronunciation|pronunciation]].
-*Wikipedia: [[en:Phoneme|phonemes]].
-*[[Wiktionary:Pronunciation key]]
-
 ====Translations====
 {| border=0 width=100%
 |-
@@ -50,6 +44,12 @@ See also:
 *Swedish: [[uttal]]
 |}
 |}
+
+====See also:====
+*Wikipedia: [[en:SAMPA|SAMPA]]
+*Wikipedia: [[w:pronunciation|pronunciation]].
+*Wikipedia: [[en:Phoneme|phonemes]].
+*[[Wiktionary:Pronunciation key]]
 
 ----
 
