--- a/wiki/dot.wikitext
+++ b/wiki/dot.wikitext
@@ -1,5 +1,5 @@
 ==English==
-===Common noun===
+===Noun===
 '''dot''' ([[dots]])
 
 # A small spot<!-- better def needed -->
@@ -9,6 +9,11 @@
 *[[spot]]
 
 ====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *Chinese Characters: [[點]], [[点]]; [[丶]]
 *Chinese: [[小點]], [[小点]]
 *Dutch: [[punt]] ''n''
@@ -17,11 +22,18 @@
 *German: [[Punkt]] ''m''
 *Greek: [[σημείο]] ''n''
 *Italian: [[puntino]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *Japanese: [[点]] ([[てん]], ten)
 *Korean: [[점]]
 *Portuguese: [[ponto]] ''m''
 *Russian: [[многоточие]] ''n'' (mnogotochie)
 *Spanish: [[punto]] ''m''
+|}
+|}
 
 ===Proper noun===
 '''Dot'''
@@ -29,12 +41,24 @@
 # Short for the female given name ''[[Dorothy]]''.
 
 ====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *Dutch: [[Doortje]] ''f'' (That's how we would shorten Dorothy)
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
 
 ===Transitive verb===
 '''to dot''' ([[dots]], [[dotted]], [[dotting]])
 
-<!-- def needed -->
+#{{substub}}
 
 ----
 
