Modifed defs a bit, verification check. please <email#44518>

--- a/wiki/email.wikitext
+++ b/wiki/email.wikitext
@@ -4,10 +4,41 @@
 Abbreviation of ''electronic mail''.
 
 ===Noun===
-#A message sent from one [[computer]] to another, usually through a [[computer]] network.
-#:''He sent an email regarding our meeting.''
-#One or more collected messages stored on a computer.
-#:''I am searching through my email.''
+#''(uncountable)'' A message transferring system from one [[computer]] to another, usually through a [[computer]] network.
+#:''He sent that via email.''
+#''(countable)'' One or more collected messages stored on a computer.
+#:''I am searching through my emails.''
+
+====Translations====
+'''a messaging system''' 
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Finnish: [[sähköposti]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
+
+'''email message(s)'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Finnish: [[viesti]], [[sähköpostiviesti]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
 
 ====See also====
 *[[webmail]]
