fmt; cleaned up; singular or plural? <MILF#63889>

--- a/wiki/MILF.wikitext
+++ b/wiki/MILF.wikitext
@@ -1,5 +1,8 @@
 ==English==
-===Noun===
-#Milf stands for 'Moms I'd like to Fuck'.
 ===Etymology===
-The word MILF was made popular by the movie American Pie'. It is now one of the top adult searches on the entire internet.
+[[Popularise]]d by the [[film]] [[w:American Pie|American Pie]].
+
+===Abbreviation===
+'''MILF'''
+
+#[[Mom]]s I'd like to [[fuck]].<!--plural or singular?-->
