--- a/wiki/ODT.wikitext
+++ b/wiki/ODT.wikitext
@@ -1,1 +1,5 @@
-'''ODT''' may stand for Optical Diffraction Tomography
+==English==
+===Abbreviation===
+'''ODT'''
+
+#[[Optical diffraction tomography]].
