--- a/wiki/MILF.wikitext
+++ b/wiki/MILF.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-[[Popularise]]d by the [[film]] ''[[w:American Pie|American Pie]]''.
+[[Popularise]]d by the [[film]] ''[[w:American Pie_(movie)|American Pie]]''.
 
 ===Abbreviation===
 '''MILF'''
