--- a/wiki/MILF.wikitext
+++ b/wiki/MILF.wikitext
@@ -5,4 +5,4 @@
 ===Abbreviation===
 '''MILF'''
 
-#[[Mom]]s I'd like to [[fuck]].<!--plural or singular?-->
+#(''slang'') [[Mom]]s I'd like to [[fuck]].<!--plural or singular?-->
