/* Translations */ +mongolian <chopstick#42153>

--- a/wiki/chopstick.wikitext
+++ b/wiki/chopstick.wikitext
@@ -18,6 +18,7 @@
 *Italian: [[bacchette]] ''f''
 *Japanese: [[箸]] (hashi)
 *Korean: [[젓가락]] (jeotgarak)
+*Mongolian: [[савх]] (savkh)<!-- possibly this is in the plural -->
 *Russian: [[палочка для еды|па́лочка для еды́]] ''f''
 *Spanish: [[palillo]] ''m''
 *Thai: [[ตะเกียบ]]
