--- a/wiki/Alice.wikitext
+++ b/wiki/Alice.wikitext
@@ -4,6 +4,7 @@
 
 #A female [[given name]].
 #The main character in [[w:Lewis Carroll|Lewis Carroll]]'s books ''[[w:Alice's Adventures in Wonderland|Alice's Adventures in Wonderland]]'' and ''[[w:Through the Looking-Glass|Through the Looking-Glass]]''.
+#In [[cryptography]], a conventional name for the person or system that sends a message.
 
 ====Translations====
 
@@ -35,3 +36,19 @@
 {|
 |}
 |}
+
+'''message sender in cryptography'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+|}
+|}
+
+===See also===
+*[[Bob]]
+*[[w:Alice and Bob|Wikipedia article on Alice and Bob]]
