--- a/wiki/Alice.wikitext
+++ b/wiki/Alice.wikitext
@@ -4,7 +4,7 @@
 
 #A female [[given name]].
 #The main character in [[w:Lewis Carroll|Lewis Carroll]]'s books ''[[w:Alice's Adventures in Wonderland|Alice's Adventures in Wonderland]]'' and ''[[w:Through the Looking-Glass|Through the Looking-Glass]]''.
-#In [[cryptography]], a conventional name for the person or system that sends a message.
+#In various fields such as [[cryptography]] and [[physics]], a conventional name for the person or system that sends a message to another person or system conventionally known as [[Bob]].
 
 ====Translations====
 
