--- a/wiki/bob.wikitext
+++ b/wiki/bob.wikitext
@@ -1,28 +1,86 @@
 ==English==
-
 ===Proper noun===
-'''Bob'''
+'''Bob''' (''plural'' '''Bobs''')
 
-#A short form of [[Robert]].
+#A short form of the male [[given name]] [[Robert]].
+#In various fields such as [[cryptography]] and [[physics]], a conventional name for the person or system that receives a message from another person or system conventionally known as [[Alice]].
 
-====Related terms====
-
+====Derived terms====
 *[[Bob's your uncle]]
 
-===Intransitive verb===
-'''to bob'''
+====Translations====
 
-#To move vertically, in either a single or repeated motion, at or near the surface of a body of water.
+'''short form of Robert'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''in cryptography, etc'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+===Intransitive verb===
+'''to bob''' ('''bobbing''', '''bobbed''', '''bobbed''')
+
+#To move gently and vertically, in either a single or repeated motion, at or near the surface of a body of water.
 #: ''The cork bobbed gently in the calm water.''
 #: ''I bobbed my head under water and saw the goldfish.''
 #: ''The ball, which we had thought lost, suddenly bobbed up out of the water.''
 #To move as though bobbing in water.
-#:''bob one's head'' (''not common in US, see [[nod]]'')
+#:''bob one's head'' (= to '''[[nod]]''')
 
-====Related terms====
+====Translations====
 
-*[[bob for apples]]
+'''move vertically at surface of water'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''move as though bobbing in water'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+====Derived terms====
 *[[bobber]]
+*[[bob for apples]]
 *[[bob up]]
 
 ===Noun===
@@ -30,13 +88,43 @@
 
 # A bobbing motion.
 # A [[bob haircut]].
-#(''plural'' '''bob''') (''British slang'') A [[shilling]].
+#(''plural'' '''bob''') (''dated British slang'') A [[shilling]] (''in the UK'')
 #:''Beer's gone up to two bob a pint.''
 
-====Related terms====
+====Translations====
+
+'''bobbing motion'''
+
+'''bob haircut'''
+''See'' [[bob haircut]]
+
+'''shilling'''
+''See'' [[shilling]]
+
+====Derived terms====
 *[[bob-a-job]]
 
 ===Transitive verb===
 
 # To cut into a [[bob haircut]].
 #: ''I got my hair bobbed.  How do you like it?''
+
+====Translations====
+
+'''cut into a bob haircut'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+===See also===
+*[[Alice]]
+*[[w:Alice and Bob|Wikipedia article on Alice and Bob]]
