--- a/wiki/shilling.wikitext
+++ b/wiki/shilling.wikitext
@@ -5,19 +5,19 @@
 #A [[coin]] formerly used in the [[United Kingdom]], [[Ireland]], [[Australia]] and [[New Zealand]] and worth [[twelve]] [[pence]] or one [[twentieth]] of a [[pound sterling]].
 #The currency of [[Kenya]], [[Somalia]], [[Tanzania]] and [[Uganda]].
 
-====Abbreviation====
-*(1): s. ''or'' s
-*(2) (''the shilling in Kenya'') [[KES]]; (''the shilling in Somalia'') [[So. Sh.]]; (''the shilling in Tanzania'') [[TSh]]; (''the shilling in Uganda'') [[UGS]]
+====Abbreviation/symbol====
+*(''in UK, etc''): s. ''or'' s ''or'' / ([[solidus]])
+*(''in Kenya'') [[KES]]; (''in Somalia'') [[So. Sh.]]; (''in Tanzania'') [[TSh]]; (''in Uganda'') [[UGS]]
 
 ====Synonyms====
-*(1) [[bob]] (''in the United Kingdom and Australia'')
-*(2) (''the shilling in Kenya'') [[Kenya shilling]]; (''the shilling in Somalia'') [[Somali shilling]]; (''the shilling in Tanzania'') [[Tanzania shilling]]; (''the shilling in Uganda'') [[Uganda shilling]];
+*(''in the UK, etc'') [[bob]] (''British, Irish and Australian'')
+*(''in Kenya'') [[Kenya shilling]]; (''in Somalia'') [[Somali shilling]]; (''in Tanzania'') [[Tanzania shilling]]; (''in Uganda'') [[Uganda shilling]]
 
 ===See also===
-*[[en:Shilling|Wikipedia article on shillings]]
+*[[w:shilling|Wikipedia article on the shilling]]
 *[[schilling]]
 *[[skilding]]
 *[[solidus]]
 
 ===External links===
-*[http://fx.sauder.ubc.ca/currency_table.html Currencies of the World]
+*[http://fx.sauder.ubc.ca/currency_table.html Currencies of the world]
