--- a/wiki/shilling.wikitext
+++ b/wiki/shilling.wikitext
@@ -10,7 +10,7 @@
 *(''in Kenya'') [[KES]]; (''in Somalia'') [[So. Sh.]]; (''in Tanzania'') [[TSh]]; (''in Uganda'') [[UGS]]
 
 ====Synonyms====
-*(''in the UK, etc'') [[bob]] (''British, Irish and Australian'')
+*(''in the UK, etc'') [[bob]] (''in Britain, Ireland and Australia'')
 *(''in Kenya'') [[Kenya shilling]]; (''in Somalia'') [[Somali shilling]]; (''in Tanzania'') [[Tanzania shilling]]; (''in Uganda'') [[Uganda shilling]]
 
 ===See also===
