--- a/wiki/A-bomb.wikitext
+++ b/wiki/A-bomb.wikitext
@@ -3,17 +3,7 @@
 English, contraction of [[atomic|'''a'''tomic]] and [[bomb]].
 
 ===Noun===
-'''A-[[bomb]]''' (''plural'' [[A-bombs]]) (''Note: Usually always capitalized'')
-
-# An [[atomic bomb]]; a weapon that derives its energy from [[nuclear reaction]]s and has enormous destructive power.
-
-====Synonyms====
-*[[atom bomb]], [[atomic bomb]]
-*[[fission bomb]]
-*[[nuke]]
-
-====Translations====
-*Hebrew: [[פצצה אטומית|פְּצָצָה אֲטוֹמִית]] ''f''
+your moms ass hole
 
 ===See also===
 *[[chain reaction]]
