/* Other Forms */ <grus#53381>

--- a/wiki/grus.wikitext
+++ b/wiki/grus.wikitext
@@ -1,6 +1,7 @@
 ==Latin==
 ===Other Forms===
-*[[gruis]]
+*[[grut]]
+
 ===Noun===
 '''grus (gru-)''' ''f'' ''[[Wiktionary Appendix:Latin third declension|3rd declension]]''
 
