reverted to pre-vandalised version; fmt <A-bomb#51201>

--- a/wiki/A-bomb.wikitext
+++ b/wiki/A-bomb.wikitext
@@ -1,17 +1,25 @@
 ==English==
 ===Etymology===
-English, contraction of [[atomic|'''a'''tomic]] and [[bomb]].
+[[A]] for '''[[atomic]]''', and [[bomb]]
 
 ===Noun===
-your moms ass hole
+'''A-[[bomb]]''' (''plural'' [[A-bombs]])<!--always capitalized-->
+
+#An [[atomic bomb]]; a weapon that derives its energy from [[nuclear reaction]]s and has enormous destructive power.
+
+====Synonyms====
+*[[atom bomb]], [[atomic bomb]], [[fission bomb]], [[nuclear bomb]], [[nuke]] (''slang'')
+
+====Translations====
+*Hebrew: [[פצצה אטומית|פְּצָצָה אֲטוֹמִית]] ''f''
 
 ===See also===
 *[[chain reaction]]
 *[[dirty bomb]]
-*[[fallout]]<!-- also fall-out? -->
+*[[fall-out]], [[fallout]]
 *[[H-bomb]], [[hydrogen bomb]]
 *[[neutron bomb]]
 *[[WMD]]
-*[[w:Nuclear Weapon|Wikipedia article on Nuclear weapons]]
+*[[w:nuclear weapon|Wikipedia article on nuclear weapons]]
 *[[w:Little Boy|Wikipedia article on the "Little Boy" A-bomb]]
 *[[w:Fat Man|Wikipedia article on the "Fat Man" A-bomb]]
