removed def; replaced by Wikipedia link <DJIA#51510>

--- a/wiki/DJIA.wikitext
+++ b/wiki/DJIA.wikitext
@@ -1,5 +1,4 @@
-''Dow Jones Industrial Average''
+==English==
+===Abbreviation===
 
-The Dow Jones Industrial Average is an index of U.S. [[companies]] that are listed on the [[stock market]]. Listed are the 30 leading U.S. public companies.
-
-ADD MORE
+#[[w:Dow Jones Industrial Average|Dow Jones Industrial Average]]
