reverted to pre-vandalised version; is "grus" crane as in the bird, the machine, or both? <grus#53381>

--- a/wiki/grus.wikitext
+++ b/wiki/grus.wikitext
@@ -1,13 +1,15 @@
 ==Latin==
-===Other Forms===
-*[[grut]]
+===Other forms===
+*[[gruis]]
 
 ===Noun===
 '''grus (gru-)''' ''f'' ''[[Wiktionary Appendix:Latin third declension|3rd declension]]''
 
-#a [[crane]]
+#[[crane]]<!--in which sense?-->
 #a type of [[siege]] weapon
+
 ===Synonyms===
-*(2): [[corvus]]
+*(''weapon''): [[corvus]]
+
 ===Etymology===
 Cognates include English [[crane]].
