+adj, Wikipedia link; commented out other n defs - do these add anything?  Are they independent meanings? <kitsch#38118>

--- a/wiki/kitsch.wikitext
+++ b/wiki/kitsch.wikitext
@@ -1,17 +1,22 @@
-=={{en}}==
+==English==
 ===Pronunciation===
 *[[w:AHD|AHD]]: kĭch
 *[[w:IPA|IPA]]: /kɪtʃ/
 *[[w:SAMPA|SAMPA]]: /kItS/
 
 ===Noun===
-'''kitsch''' &mdash; often used ''attributively''
+'''kitsch''' (''[[uncountable]]'')
 
-# [[art]], [[decorative]] objects and other forms of [[representation]] of questionable artistic or [[aesthetic]] [[value]].  A representation that is excessively [[sentimental]], overdone or [[vulgar]].
+#[[Art]], [[decorative]] objects and other forms of [[representation]] of questionable artistic or [[aesthetic]] value; a representation that is excessively [[sentimental]], overdone or [[vulgar]].
+<!--Do these definitions add anything to the definition above?  Are they independent meanings?
+#Product of a [[creative]] process where the [[medium]] receives more attention than the substance.
+#Symbol of [[identity]] or [[social]] [[status]] that is [[associate|associated]] with [[conformity]], [[mediocrity]] or lack of [[originality]].
+-->
 
-# Product of a [[creative]] process where the [[medium]] receives more attention than the substance.
+===Adjective===
+'''kitsch''' (''[[comparative]]'' '''kitscher''', ''[[superlative]]'' '''kitschest''')
 
-# Symbol of [[identity]] or [[social]] [[status]] that is [[associate|associated]] with [[conformity]], [[mediocrity]] or lack of [[originality]]
+#Of art, decor, etc, of the nature of kitsch; of questionable aesthetic value; excessively sentimental, overdone or vulgar.
 
-
-<!-- noun and adjective? -->
+===See also===
+*[[w:kitsch|Wikipedia article on kitsch]]
