fmt; +fr:, vt, italics inside brackets <email#44518>

--- a/wiki/email.wikitext
+++ b/wiki/email.wikitext
@@ -1,22 +1,28 @@
 ==English==
-
 ===Etymology===
-Abbreviation of ''electronic mail''.
+Abbreviation of '''[[electronic mail]]'''.
+
+===Variant spellings===
+*[[e-mail]]
 
 ===Noun===
-#''(uncountable)'' A message transferring system from one [[computer]] to another, usually through a [[computer]] network.
-#:''He sent that via email.''
-#''(countable)'' One or more collected messages stored on a computer.
+'''email''' (''[[countable]] and [[uncountable]]''; ''plural'' '''emails''')
+
+#(''uncountable'') A system for transferring messages from one [[computer]] to another, usually via a [[network]].
+#:''He sent me his details via email.''
+#(''countable''; ''also'' '''email message''') A message sent by this system.
 #:''I am searching through my emails.''
 
 ====Translations====
-'''a messaging system''' 
+
+'''system'''
 {| border=0 width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
 *Finnish: [[sähköposti]]
+*French: [[courrier électronique]] ''m'', [[courriel]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -25,7 +31,7 @@ Abbreviation of ''electronic mail''.
 |}
 |}
 
-'''email message(s)'''
+'''message'''
 {| border=0 width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
