def, var <e-mail#1750256>

--- a/wiki/e-mail.wikitext
+++ b/wiki/e-mail.wikitext
@@ -1,1 +1,11 @@
-Properly spelled "e-mail" rather than "email".
+==English==
+===Noun phrase===
+'''email message''' (''plural'' '''email messages''')
+
+====Variant spellings====
+*'''e-mail message'''
+
+#An [[email]]; a message sent via [[email]].
+
+====Translations====
+''See'' [[email]]
