--- a/wiki/e-mail.wikitext
+++ b/wiki/e-mail.wikitext
@@ -1,11 +1,1 @@
-==English==
-===Noun phrase===
-'''email message''' (''plural'' '''email messages''')
-
-====Variant spellings====
-*'''e-mail message'''
-
-#An [[email]]; a message sent via [[email]].
-
-====Translations====
-''See'' [[email]]
+#REDIRECT [[email]]
