--- a/wiki/dot.wikitext
+++ b/wiki/dot.wikitext
@@ -1,44 +1,79 @@
 ==English==
 ===Noun===
-'''dot''' ([[dots]])
+'''dot''' (''plural'' '''[[dots]]''')
 
-# A small spot<!-- better def needed -->
+#A small spot.
+#:''a dot of colour''
+#A symbol ( . ) having numerous uses, including, and not limited to:
+##marking the end of a sentence (a [[full stop]] or [[period]]);
+##replacing the part of a word or words removed to form an [[abbreviation]];
+##in [[mathematics]], separating the [[decimal part]] of a [[decimal]] from the [[whole part]], indicating [[multiplication]], a [[scalar product]], or in various other meanings;
+##as one of the symbols used in [[Morse code]].
 
 ====Synonyms====
-*[[point]]
-*[[spot]]
+*(''small spot''): [[speck]], [[spot]]
+*(''symbol''):
+**(''at the end of a sentence''): [[full stop]] (''British''), [[period]] (''US'')
+**(''in an abbreviation''): [[point]]
+**(''mathematics''): (''in a decimal'') [[decimal point]]
+**(''in Morse code''): [[dit]]
 
 ====Translations====
+
+'''small spot'''
 {| border=0 width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
-*Chinese Characters: [[點]], [[点]]; [[丶]]
-*Chinese: [[小點]], [[小点]]
-*Dutch: [[punt]] ''n''
-*Estonian: [[punkt]]
-*French: [[point]] ''m''
-*German: [[Punkt]] ''m''
-*Greek: [[σημείο]] ''n''
 *Italian: [[puntino]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from J to Z go here-->
+|}
+|}
+
+'''symbol'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*French: [[point#French|point]] ''m''
+*Italian: [[punto]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
+
+''See also'' '''[[decimal point]]''', '''[[full stop]]''' ''and'' '''[[period]]''' ''for more precise translations''
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+
+The translations below need to be checked by native speakers and inserted into the appropriate table(s) above.
+
+*Chinese Characters: [[點]], [[点]]; [[丶]]
+*Chinese: [[小點]], [[小点]]
+*Dutch: [[punt#Dutch|punt]] ''n''
+*Estonian: [[punkt]]
+*German: [[Punkt]] ''m''
+*Greek: [[σημείο]] ''n''
 *Japanese: [[点]] ([[てん]], ten)
 *Korean: [[점]]
 *Portuguese: [[ponto]] ''m''
 *Russian: [[многоточие]] ''n'' (mnogotochie)
 *Spanish: [[punto]] ''m''
-|}
-|}
 
 ===Proper noun===
 '''Dot'''
 
-# Short for the female given name ''[[Dorothy]]''.
+#Short form of the female [[given name]] [[Dorothy]].
 
 ====Translations====
 {| border=0 width=100%
@@ -46,7 +81,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
-*Dutch: [[Doortje]] ''f'' (That's how we would shorten Dorothy)
+*Dutch: [[Doortje]] ''f''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -58,11 +93,18 @@
 ===Transitive verb===
 '''to dot''' ([[dots]], [[dotted]], [[dotting]])
 
-#{{substub}}
+#To cover with small spots (of some liquid).
+#:''His jacket was dotted with splashes of paint.''
+#To add a dot (the symbol) or dots to.
+
+===Derived terms===
+*[[dotcom]]
+*[[dot-matrix printer]]
+*[[dot the i's and cross the t's]]
+*[[join the dots]]
 
 ----
-
 ==Malay==
 '''dot'''
 
-# [[nipple]], [[teat]]
+#[[nipple]], [[teat]]
