--- a/wiki/zombie.wikitext
+++ b/wiki/zombie.wikitext
@@ -32,7 +32,7 @@ From Zumbi, the slave leader?
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-
+*Lithuanian: [[zombis]] ''m''
 |}
 |}
 
@@ -77,7 +77,6 @@ From Zumbi, the slave leader?
 
 |}
 |}
-
 
 === Sources ===
 * August 2, 2004, [http://www.eet.com/issue/fp/showArticle.jhtml?articleId=26100928 "EE Times: Beware 'zombie' clauses]
