--- a/wiki/corpse.wikitext
+++ b/wiki/corpse.wikitext
@@ -1,6 +1,10 @@
 ===Noun===
 '''corpse'''
 
+====Translations====
+*Lithuanian: [[lavonas]] ''m''
+*Russian: [[труп]] ''m''
+
 ====Synonyms====
 *[[body]]
 *[[cadaver]]
