--- a/wiki/mummy.wikitext
+++ b/wiki/mummy.wikitext
@@ -14,6 +14,7 @@ From Middle English [[mummie]], from Old French [[momie]], from Medieval Latin [
 *French: [[momie]] ''f''
 *German: [[Mumie#German|Mumie]]
 *Italian: [[momia]] ''f''
+*Lithuanian: [[mumija]] ''f''
 *Polish: [[mumia]] ''f''
 *{{sk}}: [[múmia#Slovak|múmia]] ''f''
 *Swedish: [[mumie#Swedish|mumie]] ''c''
