--- a/wiki/mummy.wikitext
+++ b/wiki/mummy.wikitext
@@ -41,6 +41,7 @@ Diminutive of '''[[mum]]''', related to '''[[mom]]''' and '''[[mommy]]''', from 
 *French: [[maman]] ''f''
 *Italian: [[mamma#Italian|mamma]] ''f''
 *Latin: [[mamma]] ''f''
+*Lithuanian: [[mamytė]] ''f''
 *{{sk}}: [[mama#Slovak|mama]] ''f''
 *Spanish: [[mam&aacute;]] ''f''
 *Swedish: [[mamma#Swedish|mamma]] ''c''
