--- a/wiki/cadaver.wikitext
+++ b/wiki/cadaver.wikitext
@@ -24,6 +24,7 @@ ca-dav-er
 ====Translations====
 *French: [[cadavre]] ''m''
 *Italian: [[cadavere]] ''m''
+*Lithuanian: [[lavonas]] ''m''; [[negyvėlis]] ''m''
 *[[Romanica]]: [[cadaver]] ''m''
 *Slovak: [[mŕtvola]] ''f''
 *Spanish: [[cadáver]] ''m''
