--- a/wiki/body.wikitext
+++ b/wiki/body.wikitext
@@ -20,6 +20,7 @@
 *[[Italian]]: [[corpo]] ''m''
 *[[Japanese]]: [[からだ]] / [[体]] (karada), [[身体]] ([[しんたい]], shintai), [[身]] ([[み]], mi)
 *[[Latin]]: [[corpus]]
+*[[Lithuanian]]: [[kūnas]] ''m'' (1); approxim. [[visuma]] ''f'' (2)
 *[[Low Saxon]]: [[Kropp]] ''m''
 *[[Spanish]]: [[cuerpo]] ''m'' (1), [[carrocería]] ''f'' (3)
 *Swedish: [[kropp]] ''c'' (1, 2), [[kaross]] ''c'' (3)
