--- a/wiki/Lithuanian.wikitext
+++ b/wiki/Lithuanian.wikitext
@@ -10,7 +10,7 @@
 #:*Indonesian: [[bahasa]] [[Lithuania]]
 #:*Japanese: [[リトアニア語]]
 #:*Latvian: [[lietuviešu valoda]]
-#:*Lithuanian: [[Lietuvių kalba]] ''f''
+#:*Lithuanian: [[lietuvių kalba]] ''f''
 #:*Polish: [[język litewski]], [[litewski]]
 #:*Romanian: [[lituanian&#259;]] ''f''
 #:*Slovenian: [[litovščina]] ''f''
@@ -24,7 +24,7 @@
 #:*Indonesian: [[orang]] [[Lithuania]]
 #:*Japanese: [[リトアニア人]]
 #:*Latvian: [[lietuvietis]] ''m'', [[lietuviete]] ''f''
-#:*Lithuanian: [[Lietuvis]] ''m''; [[Lietuvė]] ''f''
+#:*Lithuanian: [[lietuvis]] ''m''; [[lietuvė]] ''f''
 #:*Polish: [[Litwin]] ''m'', [[Litwinka]] ''f''
 #:*Romanian: [[lituanian]] ''m'', [[lituanian&#259;]], [[lituanianc&#259;]] ''f'', [[lituanieni]] ''m pl'', [[lituaniene]], [[lituanience]] ''f pl''
 #:*Slovenian: [[Litvanec]] ''m'', [[Litvanka]] ''f''
