--- a/wiki/Lithuanian.wikitext
+++ b/wiki/Lithuanian.wikitext
@@ -39,7 +39,7 @@
 #:*German: [[litauisch]]
 #:*Japanese: リトアニアの～、リトアニア人［語］の～、リトアニア[的な]～
 #:*Latvian: [[Lietuvas]] (''of Lithuania''), [[lietuviešu]] (''of Lithuanians'')
-#:*Lithuanian: [[Lietuviškas]] ''m''; [[Lietuviška]] ''f''
+#:*Lithuanian: [[lietuviškas]] ''m''; [[lietuviška]] ''f''
 #:*Polish: [[litewski]] ''m'', [[litewska]] ''f'', [[litewskie]] ''n''
 #:*Romanian: [[lituanian]] ''m'', [[lituanian&#259;]]''f'', [[lituanieni]] ''m pl'', [[lituaniene]] ''f pl''
 #:*Slovenian: [[litovski]] ''m'', [[litovska]] ''f'', [[litovsko]] ''n''
