--- a/wiki/apricot.wikitext
+++ b/wiki/apricot.wikitext
@@ -11,6 +11,7 @@
 *German: [[Aprikose]] ''f'', [[Marille]] ''f'' (''Austria'')
 *Italian: [[albicocca]] ''f''
 *Japanese: [[杏子]]
+*Lithuanian: [[abrikosas]] ''m''
 *{{pl}}: [[morela]] ''f''
 *Portuguese: [[alperce]] ''m'', [[damasco]] ''m''
 *[[Romanica]]: [[albricoc]] ''m''
