+fi, spelling, format, wikifying <eukaryote#33601>

--- a/wiki/eukaryote.wikitext
+++ b/wiki/eukaryote.wikitext
@@ -1,8 +1,13 @@
-===Noun===
+==English==
+
 ====Etymology====
-eu– (good-, well-, true) + Greek karuotos, having nuts (from karuon, nut)
-====Meanings====
-#Single-celled or muliticellular organism whose cells contain at least one distinct nucleus.
+[[eu–]] (good-, well-, true) + Greek karuotos, having nuts (from karuon, nut)
+
+===Noun===
+'''eukaryote''' ('''[[eukaryotes]]''')
+
+#Single-celled or multicellular organism whose cells contain at least one distinct nucleus.
 
 ====Translations====
+*Finnish: [[aitotumallinen]] (1), [[eukaryootti]] (1)
 *Lithuanian: [[eukariotas]] ''m''
