--- a/wiki/zaffre.wikitext
+++ b/wiki/zaffre.wikitext
@@ -1,3 +1,6 @@
 =={{en}}==
 ===Noun===
 # a [[blue]] [[pigment]] obtained by roasting [[cobalt]] [[ore]]; [[cobalt blue]]
+
+====Translations====
+*Lithuanian: [[kobalto mėlynasis]] ''m''
