--- a/wiki/feldspar.wikitext
+++ b/wiki/feldspar.wikitext
@@ -23,6 +23,9 @@
 #[[Bytownite]]
 #[[Anorthite]]
 
+===Adjective===
+#Feldspathic: Containing feldspar.
+
 ===Related words===
 :''See'' [[Rock]], [[Mineral]], [[Granite]]
 
