/* Adjective */ +2nd form <feldspar#63923>

--- a/wiki/feldspar.wikitext
+++ b/wiki/feldspar.wikitext
@@ -25,6 +25,7 @@
 
 ===Adjective===
 #Feldspathic: Containing feldspar.
+#Feldspathoid: Resembling a feldspar.
 
 ===Related words===
 :''See'' [[Rock]], [[Mineral]], [[Granite]]
