Added Dutch translation <density#29746>

--- a/wiki/density.wikitext
+++ b/wiki/density.wikitext
@@ -3,6 +3,7 @@
 #The amount of [[matter]] packed into a given [[volume]].
 
 ==== Translations ====
+*[[Dutch]]: [[dichtheid]]
 *[[Finnish]]: [[tiheys]]
 *[[French]]: [[densité]] ''n.f.''
 *[[German]]: [[Dichte]]
