Added another Dutch translation <carpet#44022>

--- a/wiki/carpet.wikitext
+++ b/wiki/carpet.wikitext
@@ -14,7 +14,7 @@ From Latin ''carpere'', to pluck.
 
 ==== Translations ====
 *Chinese: [[地毯]]
-*Dutch: [[tapijt]] ''n''
+*Dutch: [[tapijt]] ''n'', [[vloerkleed]]
 *French: [[tapis]] ''m''
 *German: [[Teppich]] ''m''
 *Greek: [[τάπητας]] ''m''
@@ -30,6 +30,7 @@ From Latin ''carpere'', to pluck.
 '''to carpet''' ([[carpeted]], [[carpeting]])
 
 ====Translations====
+*Dutch: [[vloerkleed]] [[leggen]]
 *French: [[tapisser]]
 *German: mit Teppich auszulegen
 *Italian: [[coprire]]
