--- a/wiki/fucktard.wikitext
+++ b/wiki/fucktard.wikitext
@@ -1,6 +1,6 @@
 ===Noun===
 '''fucktard''' (plural: [[fucktards]])
-#An extraordinarily stupid person.  (Probably derived from [[fucking]] [[retard]].)
+#An extraordinarily stupid person.  (Probably derived from [[fucking]] + [[retard]].)
 #: ''That fucktard spilled Mountain Dew all over my keyboard.''
 
 ====Synonyms====
