--- a/wiki/birthday.wikitext
+++ b/wiki/birthday.wikitext
@@ -6,7 +6,7 @@
 #the date on which someone is born or something is created
 
 ====Translations====
-*Chinese: [[рожден ден]]
+*Bulgarian (Български): [[рожден ден]]
 *Chinese: [[生日]] (1) (shēngrì)
 *Dutch: [[verjaardag]] ''m'' (1), [[geboortedatum]] ''m'' (2)
 *French: [[anniversaire]] ''m'' (1)
