Added related word "cannibalise" <cannibal#50599>

--- a/wiki/cannibal.wikitext
+++ b/wiki/cannibal.wikitext
@@ -15,4 +15,5 @@ Spanish: Canibalis: the name given by Christopher Columbus to the Caribs of Cuba
 
 ==Related Words==
 
-[[cannibalism]]
+*[[cannibalism]]
+*[[cannibalise]]
