--- a/wiki/baby.wikitext
+++ b/wiki/baby.wikitext
@@ -13,6 +13,7 @@ bāb'i, /ˈbeɪbi/, /"beIbi/
 #:''Hey baby, what are you doing later?''
 #A pet project or responsibility.
 #:''The annual report has been my ''baby'' since September.''
+#The lastborn of an offspring.  The youngest child of a family.
 
 ====Synonyms====
 *(''young human being''): [[babe]], [[infant]]
