--- a/wiki/lastborn.wikitext
+++ b/wiki/lastborn.wikitext
@@ -8,5 +8,5 @@
 
 ===Adjective===
 
-#Born last in a family. Youngest a the family.
+#Born last in a family. Youngest in a the family.
 #''Figurative.'' Younger than anyone else in a group.
