/* Noun */ <half brother-in-law#63930>

--- a/wiki/half_brother-in-law.wikitext
+++ b/wiki/half_brother-in-law.wikitext
@@ -5,7 +5,7 @@
 
 #The [[half brother]] of someone's [[husband]].
 #The half brother of someone's [[wife]].
-#The husband of someone's half sister.
+#The husband of someone's [[half sister]].
 #The husband of the half sister of someone's husband.
 #The husband of the half sister of someone's wife.
 
