--- a/wiki/centimetre.wikitext
+++ b/wiki/centimetre.wikitext
@@ -9,16 +9,16 @@ Latin ''[[centi-]]'', hundred + [[metre]]
 #An [[SI#Abbreviation|SI]] and MKS subunit of [[length]], equal to one-hundredth of a [[metre]].  Symbol: cm
 
 ==== Translations ====
-*Arabic: سنتميتر
+*Arabic: [[سنتميتر]]
 *Chinese: [[厘米]]
 *Finnish: [[senttimetri]]
 *French: [[centimètre]] ''m''
 *German: [[Zentimeter]] ''m''
-*Greek: [[ ]] (hekatostometro)
+*Greek: (hekatostometro)
 *Interlingua: [[centimetro]]
 *Italian: [[centimetro]] ''m''
 *Polish: [[centymetr]] ''m''
 *Portuguese: [[centímetro]] ''m''
 *Spanish: [[centímetro]] ''m''
 *Swedish: [[centimeter]] ''c''
-*Vietnamese: [[xentimet]]
+*Vietnamese: [[xentimet]]<!-- diacritics needed -->
