--- a/wiki/idiot.wikitext
+++ b/wiki/idiot.wikitext
@@ -21,7 +21,7 @@
 *German: Idiot ''m''
 *Greek: [[ηλίθιος]] ''n''
 *Irish: [[amadán]]
-*Japanese: [[馬鹿]]
+*Japanese: [[馬鹿]]'Baka'
 *Korean: [[백치]]
 *Latenkwa: [[zuxenxaymi]]
 *Latin: [[idiota]] ''m''
