fmt, remove useless pronunciation section <Larissa#36321>

--- a/wiki/Larissa.wikitext
+++ b/wiki/Larissa.wikitext
@@ -1,11 +1,7 @@
 ==English==
-===Pronunciation===
-'''La-riss*a'''
-*[[IPA]]: //
-*[[SAMPA]]: //
-leh-RIHs-a
+===Proper noun===
+'''Larissa'''
 
-====Proper noun====
 #(''Mythology'') A daughter of Pelasgus.
 #A city in north-central [[Greece]], the capital of [[Thessaly]].
 #A feminine name (after the mythological character).
@@ -15,11 +11,12 @@ leh-RIHs-a
 *Japanese: R&acirc;-risa (2)
 *Latin: Larissa (2)
 
-====See also====
+===See also===
 *[[en:Larissa_(mythology)|Wikipedia on Larissa, the mythological character]]
 *[[en:Larissa|Wikipedia article on Larissa, the city]]
 
 ----
+
 ==Latin==
 ===Proper noun===
 '''Larissa'''
