/* See also */ fix wikipedia links <Larissa#36321>

--- a/wiki/Larissa.wikitext
+++ b/wiki/Larissa.wikitext
@@ -12,8 +12,8 @@
 *Latin: Larissa (2)
 
 ===See also===
-*[[en:Larissa_(mythology)|Wikipedia on Larissa, the mythological character]]
-*[[en:Larissa|Wikipedia article on Larissa, the city]]
+*[[w:Larissa_(mythology)|Wikipedia on Larissa, the mythological character]]
+*[[w:Larissa|Wikipedia article on Larissa, the city]]
 
 ----
 
