--- a/wiki/%E4%B8%8F.wikitext
+++ b/wiki/%E4%B8%8F.wikitext
@@ -10,11 +10,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': parapet; invisible
+* '''Common Meaning''': [[parapet]]; [[invisible]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** [[Mandarin]]:
@@ -30,7 +30,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[べん]] (ben), [[めん]] (men)
@@ -40,9 +40,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''Pronunciation''': 면
+* '''Pronunciation''': [[면]]
 
 * '''Romanization'''
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': myeon
