--- a/wiki/cunt.wikitext
+++ b/wiki/cunt.wikitext
@@ -1,6 +1,6 @@
 ===Noun===
 
-# (''obscene'')  strongly crude term for female [[genitalia]] (LOL)
+# (''obscene'')  strongly crude term for female [[genitalia]]
 # (''extremely offensive and extremely vulgar if used directly at someone; highly vulgar otherwise; see usage note below'') A derogatory term for a female person
 # (''extremely offensive and extremely vulgar if used directly at someone; highly vulgar otherwise; see usage note below'') A derogatory term for a male person
 # (''markedly vulgar'') A term for a nonhuman object, expressing strong contempt for such object ('''Example:''' ''Damn!  I tripped over that'' '''''cunt''''' ''[referring, in this example, to a piece of wood] lying in the hall!'')
