fmt; sep pt entry <bosque#5132>

--- a/wiki/bosque.wikitext
+++ b/wiki/bosque.wikitext
@@ -1,12 +1,21 @@
-=[[Spanish]]=
-== noun, ''m'' ==
-===Translations===
-*[[English]]: [[forest]]
-*[[Esperanto]]: [[]]
-*[[French]]: [[]]
+==Spanish==
+=== Noun ===
+'''bosque''' ''m''
+
+# [[forest]]
+
+====Translations====
+*English: [[forest]]
 *[[Guarani]]: [[ka'aguy]]
 *[[Interlingua]]: [[bosco]]
-*[[Italian]]: [[]]
-*[[Latin]]: [[silva]], -ae
-*[[Polish]]: [[las]] ''m''
-*[[Portuguese]]: bosque ''m''
+*Latin: [[silva]], -ae
+*Polish: [[las]] ''m''
+*Portuguese: bosque ''m''
+
+----
+
+==Portuguese==
+=== Noun ===
+'''bosque''' ''m''
+
+# [[forest]]
