--- a/wiki/feel.wikitext
+++ b/wiki/feel.wikitext
@@ -1,16 +1,13 @@
-=English=
+==English==
+=== Pronunciation ===
+*[[w:IPA|IPA]]: /fil/
 
-==Etymology==
+===Etymology===
 Old English ''felan'' 
 :[[akin]] to Old Norse ''falma'' to grope
 
-== Pronunciation ==
-*[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /'fil/
-
-== Verb, transitive ==
-
-'''to feel''' ([[felt]], felt)
+=== Verb, transitive ===
+'''to feel''' ([[feels]], [[felt]], [[feeling]])
 
 # To become aware of through the [[skin]]; to use the [[sense]] of [[touch]].
 # To have a [[sensation]] of something without the use of touch, [[sight]], [[hearing]], [[smell]], or [[taste]].
@@ -22,30 +19,32 @@ Old English ''felan''
 # To experience the [[consequence]]s of.
 # To [[think]], [[believe]], or have an [[impression]] concerning.
 
-=== Translations ===
+==== Translations ====
 *Danish: [[føle]] (touch)
-*[[Dutch]]: [[voelen]] (touch)
-*[[Indonesian]]: [[rasa|merasa]], [[rasa|merasakan]], [[anggap|menganggap]], [[anggap|beranggap]], [[anggap|beranggapan]] (touch)
-*[[Japanese]]: [[感じる]] ([[かんじる]], kanjiru) (touch)
-*[[French]]: [[sentir]] (to feel)
+*Dutch: [[voelen]] (touch)
+*French: [[sentir]] (to feel)
+*Indonesian: [[rasa|merasa]], [[rasa|merasakan]], [[anggap|menganggap]], [[anggap|beranggap]], [[anggap|beranggapan]] (touch)
+*Japanese: [[感じる]] ([[かんじる]], kanjiru) (touch)
 
-==Verb, intransitive==
+===Verb, intransitive===
+'''to feel''' ([[feels]], [[felt]], [[feeling]])
 
 # To receive information by touch or by any [[neuron]]s other than those responsible for sight, smell, taste, or hearing.
 # To [[grope]]; to examine by touch.
 # To [[perceive]] a [[state]] of [[mind]] or of [[body]].
 
-===Usage Note===
+===Usage note===
 * ''I feel bad.'' means either ''I seem to myself to be [[sick]].'' or ''I am full of [[regret]].''
 * ''I feel badly.'' means ''I have [[trouble]] experiencing emotions.'' or ''I am not able to use the sense of touch well.''
 
-==Noun==
+===Noun===
+'''feel''' ([[feels]])
 
 # A quality of an object experienced by touch.
 # A [[vague]] [[mental]] [[impression]].
 # An act of [[fondle|fondling]].
 
-====Derived Terms====
+===Derived terms===
 *[[feeler]]
 *[[feeling]]
 *[[feel for]]
