--- a/wiki/clip.wikitext
+++ b/wiki/clip.wikitext
@@ -8,7 +8,7 @@
 # An act of clipping, such as a [[haircut]].
 #: ''I went into the salon to get a clip.''
 
-==Verb==
+===Verb===
 '''clip'''
 # To shorten by cutting.
 #: ''She clipped my hair with her scissors.''
