/* External link */  fmt <vote-by-mail#63814>

--- a/wiki/vote-by-mail.wikitext
+++ b/wiki/vote-by-mail.wikitext
@@ -8,4 +8,4 @@
 #: ''In Oregon, elections are conducted using vote-by-mail.''
 
 ===External link===
-[[w:vote-by-mail|Wikipedia article on vote-by-mail]]
+*[[w:vote-by-mail|Wikipedia article on vote-by-mail]]
