--- a/wiki/luz.wikitext
+++ b/wiki/luz.wikitext
@@ -1,11 +1,19 @@
-= [[Portuguese]] =
-== [[noun]] ==
+== Portuguese ==
+=== Noun ===
+'''luz'''
+
 # [[light]]
+
 === See also ===
 *[[dar à luz]]
+
 ----
-= [[Spanish]] =
-== [[noun]] ==
+
+== Spanish ==
+=== Noun ===
+'''luz''' ''f''
+
 # [[light]]
+
 === See also ===
 *[[dar a luz]]
