--- a/wiki/p%C3%A1lpebra.wikitext
+++ b/wiki/p%C3%A1lpebra.wikitext
@@ -1,6 +1,8 @@
-=[[Portuguese]]=
-==Noun==
-''s.f.''
+==Portuguese==
+===Noun===
+'''Pálpebras''' ''f''
+
 #a thin skin membrane which moves over an [[eye]].
-===Translations===
-*[[English]]: [[eyelid]]
+
+====Translations====
+*English: [[eyelid]]
