--- a/wiki/%D8%A3%D9%86%D8%A7.wikitext
+++ b/wiki/%D8%A3%D9%86%D8%A7.wikitext
@@ -18,51 +18,46 @@ Subject pronoun.
 ====Translations====
 # The first person, '''I''' refers to the speaker.
 #:'''Translations'''
-#:*[[Afrikaans]]:[[]]
 #:*[[Basque]]: [[ni]], [[nik]]
-#:*[[Bengali]]: [[]]
-#:*[[Bulgarian]]: [[аз]]
+#:*Bulgarian: [[аз]]
 #:*[[Catalan]]: [[jo]]
-#:*[[Chinese]]:[[我]] ( ''[[pinyin]]: wǒ'' )
-#:*[[Dutch]]: [[ik]]
-#:*[[English]]: [[I]]
+#:*Chinese:[[我]] ( ''[[pinyin]]: wǒ'' )
+#:*Dutch: [[ik]]
+#:*English: [[I]]
 #:*[[Esperanto]]: [[mi]]
-#:*[[Finnish]]: [[minä]]
-#:*[[French]]: [[je]]
+#:*Finnish: [[minä]]
+#:*French: [[je]]
 #:*[[Frisian]]: [[ik]]
-#:*[[German]]: [[ich]]
-#:*[[Greek]]: [[έγώ]] (needs different accent on epsilon) (ego/egho)
+#:*German: [[ich]]
+#:*Greek: [[έγώ]] (needs different accent on epsilon) (ego/egho)
 #:*[[Guaraní]]: [[che]]
 #:*[[Hindi]]: [[मैं]] (mai.n)
-#:*[[Icelandic]]: [[ég]]
+#:*Icelandic: [[ég]]
 #:*[[Ido]]: [[me]]
-#:*[[Indonesian]]: [[saya]] (formal), [[aku]] (close)
+#:*Indonesian: [[saya]] (formal), [[aku]] (close)
 #:*[[Interlingua]]: [[io]]
 #:*[[Interlingue Occidental]]: [[yo]]
-#:*[[Italian]]: [[io]]
-#:*[[Japanese]]: [[私]] ([[わたし]], watashi; [[わたくし]], watakushi) (formal), [[僕]] ([[ぼく]], boku) (close, usually male), [[俺]] ([[おれ]], ore) (slang, male only)
+#:*Italian: [[io]]
+#:*Japanese: [[私]] ([[わたし]], watashi; [[わたくし]], watakushi) (formal), [[僕]] ([[ぼく]], boku) (close, usually male), [[俺]] ([[おれ]], ore) (slang, male only)
 #:*[[Kabyle]]: [[nekk]]
-#:*[[Korean]]: [[나]] (na)
-#:*[[Latin]]: [[ego]]
+#:*Korean: [[나]] (na)
+#:*Latin: [[ego]]
 #:*[[Latino sine Flexione]]: [[me]]
-#:*[[Lithuanian]]: [[aš]] (pronunced as ah-sh)
+#:*Lithuanian: [[aš]] (pronunced as ah-sh)
 #:*[[Lojban]]: [[pami]]
 #:*[[Low Saxon]]: [[ik (pd)|ik]]
 #:*[[Manchu]]: ([[bi]])
 #:*[[Mandarin]]: [[&#x6211; w&#x1d2;]]
-#:*[[Norwegian]] ([[bokmål]]): [[jeg]]
-#:*[[Norwegian]] ([[nynorsk]]): [[eg]]
-#:*[[Polish]]: [[ja]]
-#:*[[Portuguese]]: [[eu]]
-#:*[[Romanian]]: [[eu]]
-#:*[[Russian]]: [[я]]
-#:*[[Slovak]]: [[Ja]]
-#:*[[Somali]]: [[]]
-#:*[[Spanish]]: [[yo]]
-#:*[[Swedish]]: [[jag]]
-#:*[[Swahili]]: [[]]
-#:*[[Tagalog]]: [[]]
+#:*Norwegian ([[bokmål]]): [[jeg]]
+#:*Norwegian ([[nynorsk]]): [[eg]]
+#:*Polish: [[ja]]
+#:*Portuguese: [[eu]]
+#:*Romanian: [[eu]]
+#:*Russian: [[я]]
+#:*Slovak: [[Ja]]
+#:*Spanish: [[yo]]
+#:*Swedish: [[jag]]
 #:*[[Tok Pisin]]: [[mi]]
 #:*[[Tupinambá]]: [[ixé]], [[xe]]
-#:*[[Turkish]]: [[ben]]
+#:*Turkish: [[ben]]
 #:*[[Volapuk]]: [[ob]]
