fmt; verb def needed <party#9084>

--- a/wiki/party.wikitext
+++ b/wiki/party.wikitext
@@ -1,4 +1,7 @@
-=Noun=
+==English==
+===Noun===
+'''party''' ([[parties]])
+
 #A legal entity which represents a [[faction]] of the [[people]] from a country and is united under one specific political [[platform]] of issues.
 #(In 18th & 19th century Britain) A parliamentary faction without a corresponding legal entity.
 #social gathering for entertainment and fun
