--- a/wiki/cassowary.wikitext
+++ b/wiki/cassowary.wikitext
@@ -1,9 +1,8 @@
-=[[Noun]]=
-
-==[[Definition]]==
+==English==
+===Noun===
+'''cassowary'''
 
 #A large flightless bird of the genus ''Casuarius'', native to Australia and New Guinea, with a characteristic bony crest on its head.
 
-==[[Translation]]s==
-
-*[[Russian]]: [[казуар]]
+====Translations====
+*Russian: [[казуар]]
