/* Translations */ balance columns <portmanteau#29>

--- a/wiki/portmanteau.wikitext
+++ b/wiki/portmanteau.wikitext
@@ -29,18 +29,18 @@ From French ''porter'', to [[carry]]; and ''manteau'', [[coat]].  (''Note that t
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from A to I go here-->
+<!--left column-->
 *[[Breton]]: [[mal]] ''f'', [[malizenn]] ''f''
 *Bulgarian: [[голям]] [[кожен]] [[куфар]] ''m''
 *Dutch: [[koffer]] ''f'', [[valies]] ''f''
 *{{fi}}: [[matkalaukku]]
 *French: [[valise#French|valise]] ''f'', [[malle]] ''f''
-*[[Interlingua]]: [[valise#Interlingua|valise]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from J to Z go here-->
+<!--right column-->
+*[[Interlingua]]: [[valise#Interlingua|valise]]
 *[[Persian]]: [[چمدان]]  (Chamedan)
 *Portuguese: [[maleta#Portuguese|maleta]] ''f'', [[valise#Portuguese|valise]] ''f''
 *Spanish: [[maleta#Spanish|maleta]] ''f'', [[valija]] ''f''
