--- a/wiki/protrusion.wikitext
+++ b/wiki/protrusion.wikitext
@@ -1,6 +1,6 @@
 == Noun ==
 
-1. 
-a. The act of protruding.
-b. The state of being protruded.
-2. Something that protrudes.
+#. 
+##. The act of protruding.
+##. The state of being protruded.
+#. Something that protrudes.
