--- a/wiki/protrusion.wikitext
+++ b/wiki/protrusion.wikitext
@@ -1,6 +1,8 @@
 == Noun ==
 
-#. 
-##. The act of protruding.
-##. The state of being protruded.
-#. Something that protrudes.
+#
+## The act of protruding.
+## The state of being protruded.
+# Something that protrudes.
+
+See also: [[hernia]]
