formatting, +fi <hernia#37569>

--- a/wiki/hernia.wikitext
+++ b/wiki/hernia.wikitext
@@ -1,9 +1,23 @@
+==English==
 ===Noun===
 '''hernia'''
 
 # (''Medicine'') a [[disorder]] in which a part of the body [[protrude]]s abnormally through a tear or opening in an adjacent part.
 
 ====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *Dutch: hernia ''f''
+*Finnish: [[tyrä]], [[revähtymä]]
 *German: [[Bruch]] ''m'', [[Hernie]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *Spanish: hernia ''f''
+|}
+|}
