formatting <wisdom tooth#5777>

--- a/wiki/wisdom_tooth.wikitext
+++ b/wiki/wisdom_tooth.wikitext
@@ -1,15 +1,27 @@
+==English==
 ===Noun===
 '''wisdom tooth''' (plural: [[wisdom teeth]])
 
 # one of the four (one upper and one lower on each side) rearmost [[molar]]s in humans, which typically develop between ages 18-24.
 
-===Translations===
-
+====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *Bulgarian: [[мъдрец]] ''m''
 *Dutch: [[wijsheidstand]] ''m''
 *Finnish: [[viisaudenhammas]]
 *French: [[dent de sagesse]] ''f''
 *German: [[Weisheitszahn]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *Japanese: [[親知らず]] (おやしらず, oya-shirazu)
 *Polish: [[ząb mądrości]] ''m''
 *Romanian: [[măsea de minte]] ''f''
+|}
+|}
