/* Translations */ formatting <Esperanto#1920>

--- a/wiki/Esperanto.wikitext
+++ b/wiki/Esperanto.wikitext
@@ -21,6 +21,11 @@
 *[[Esperantist]]
 
 ====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *[[Basque]]: esperanto
 *Bulgarian: [[Есперанто]]
 *[[Catalan]]: esperanto ''m''
@@ -37,6 +42,11 @@
 *[[Interlingua]]: esperanto
 *[[Irish]]: [[Espeirantó]] ''m''
 *Italian: esperanto
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *Japanese: [[エスペラント]] (esuperanto), [[エスペラント語]] (esuperanto-go)
 *[[Klingon]]: [['eSperanto]]
 *Korean: [[에스페란토란]]
@@ -54,6 +64,8 @@
 *Swedish: esperanto
 *[[Toki Pona]]: [[toki Epelanto]]
 *Vietnamese: [[tiếng etperantô]]
+|}
+|}
 
 ==== External links====
 *[http://www.websters-online-dictionary.org/definition/Esperanto-english/ Esperanto - English Dictionary]: from [http://www.websters-online-dictionary.org/ Webster's Dictionary] - the Rosetta Edition.
