--- a/wiki/party.wikitext
+++ b/wiki/party.wikitext
@@ -5,3 +5,48 @@
 #A legal entity which represents a [[faction]] of the [[people]] from a country and is united under one specific political [[platform]] of issues.
 #(In 18th & 19th century Britain) A parliamentary faction without a corresponding legal entity.
 #social gathering for entertainment and fun
+
+====Translations====
+'''political group'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Finnish: [[puolue]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
+<!--Uncomment when adding first translation
+'''a parliamentary faction'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+
+|}
+|}
+-->
+'''a social gathering'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Finnish: [[juhla]], [[juhlat]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
