fmt; this exact def appears in various different sources (see http://www.google.com/search?hl=en&q=%22mental+predisposition+to+perceive+one+thing+and+not+another%22&btnG=Google+Search) <perceptual set#63929>

--- a/wiki/perceptual_set.wikitext
+++ b/wiki/perceptual_set.wikitext
@@ -1,1 +1,5 @@
-a mental predisposition to perceive one thing and not another
+==English==
+===Noun phrase===
+'''perceptual set'''
+
+#A mental [[predisposition]] to perceive one thing and not another.
