--- a/wiki/fucktard.wikitext
+++ b/wiki/fucktard.wikitext
@@ -1,6 +1,8 @@
+==English==
 ===Noun===
-'''fucktard''' (plural: [[fucktards]])
-#An extraordinarily stupid person.  (Probably derived from [[fucking]] + [[retard]].)
+'''fucktard''' (''plural'' '''[[fucktards]]''')
+
+#(''taboo slang'') An extraordinarily stupid person.  (Probably derived from [[fucking]] + [[retard]].)
 #: ''That fucktard spilled Mountain Dew all over my keyboard.''
 
 ====Synonyms====
