--- a/wiki/protrusion.wikitext
+++ b/wiki/protrusion.wikitext
@@ -1,8 +1,10 @@
-== Noun ==
+==English==
+===Noun===
+'''protrusion''' (''[[countable]] and [[uncountable]]''; ''plural'' '''protrusions''')
 
-#
-## The act of protruding.
-## The state of being protruded.
-# Something that protrudes.
+#(''uncountable'') The act of [[protrude|protruding]].
+#(''uncountable'') The state of being protruded.
+#(''countable'') Anything that protrudes.
 
-See also: [[hernia]]
+===See also===
+*[[hernia]]
