--- a/wiki/be.wikitext
+++ b/wiki/be.wikitext
@@ -105,7 +105,7 @@
 *Norwegian: [[være]]
 *Portuguese: ''intransitive'' '''1''' [[ser]], [[existir]], '''2''' [[estar]]; ''copular'' '''1~3''' [[ser]]; ''auxiliary'' '''1''' [[ser]] (with passive voice), '''2''' [[estar]] (with active voice)
 *Romanian: [[fi]] (long infinitive ''a fi'')
-*Russian: [[быть]]
+*Russian: [[:ru:быть|быть]]
 *Spanish: [[ser]], [[estar]] (''note'' : ''ser'' and ''estar'' are not employed in the same cases)
 *Swedish: [[vara]]
 |}
@@ -159,3 +159,6 @@
 # [[besides]]; [[but]], [[except]]
 
 [[pl:be]]
+
+==[[multilingual associations]]== 
+*[[Russian]]: to '''be''' с тобой /s toboy/ ([[with]] [[you]])
