fmt; corrected def (was for "protruding"); deleted "see also hernia" <protrude#63944>

--- a/wiki/protrude.wikitext
+++ b/wiki/protrude.wikitext
@@ -1,3 +1,5 @@
-Extending out above or beyond a surface or boundary.
+==English==
+===Noun===
+'''to protrude''' ('''protruding''', '''protruded''', '''protruded''')
 
-See also: [[hernia]]
+#To [[extend]] from, above or beyond a [[surface]] or [[boundary]].
