fmt; etym <hoodie#63926>

--- a/wiki/hoodie.wikitext
+++ b/wiki/hoodie.wikitext
@@ -1,3 +1,8 @@
-Hoodie
+==English==
+===Etymology===
+[[hood]] + [[-ie]]
 
-A type of sweatshirt with a hood and a very large pocket in front
+===Noun===
+'''hoodie''' (''plural'' '''hoodies''')
+
+#A [[sweatshirt]] that has a [[hood]] and a large [[pocket]] at the front.
