--- a/wiki/worm.wikitext
+++ b/wiki/worm.wikitext
@@ -24,6 +24,12 @@
 * [[fishing worm]]
 
 ====Translations====
+
+'''worm'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
 *[[Bosnian]]: [[crv]] ''m''
 *Bulgarian: [[червей]] (červej)
 *Catalan: [[cuc]] ''m''
@@ -33,6 +39,10 @@
 *French: [[ver]] ''m'' (1,3)
 *German: [[Wurm]] ''m''
 *Hungarian: [[kukac]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
 *Indonesian: [[cacing]]
 *Italian: [[verme]] ''m'' (1,2)
 *Japanese: [[虫]] ([[むし]], mushí)
@@ -43,6 +53,8 @@
 *Slovene: [[črv]] ''m''
 *Spanish: [[gusano]]
 *Swedish: [[mask]]
+|}
+|}
 
 ===Intransitive verb===
 '''to worm''' ([[wormed]], wormed)
