--- a/wiki/worm.wikitext
+++ b/wiki/worm.wikitext
@@ -33,11 +33,13 @@
 *[[Bosnian]]: [[crv]] ''m''
 *Bulgarian: [[червей]] (červej)
 *Catalan: [[cuc]] ''m''
+*Chinese: [[蟲]] (chóng)
 *Czech:  [[červ]]
 *Dutch: [[worm#Dutch|worm]]
 *Finnish: [[mato]]
 *French: [[ver]] ''m'' (1,3)
 *German: [[Wurm]] ''m''
+*Greek: [[σκώληξ]] (skólix) ''m''
 *Hungarian: [[kukac]]
 |}
 | width=1% |
@@ -46,6 +48,7 @@
 *Indonesian: [[cacing]]
 *Italian: [[verme]] ''m'' (1,2)
 *Japanese: [[虫]] ([[むし]], mushí)
+*Korean: [[]] (beolle)
 *Lithuanian: [[kirmėlė]] ''f''; [[kirminas]] ''m'' (means also insect larvas)
 *Polish: [[robak]]
 *Portuguese: [[verme]] ''m''
