--- a/wiki/worm.wikitext
+++ b/wiki/worm.wikitext
@@ -48,8 +48,8 @@
 *Indonesian: [[cacing]]
 *Italian: [[verme]] ''m'' (1,2)
 *Japanese: [[虫]] ([[むし]], mushí)
-*Korean: [[]] (beolle)
-*Lithuanian: [[kirmėlė]] ''f''; [[kirminas]] ''m'' (means also insect larvas)
+*Korean: [[벌레]] (beolle)
+*Lithuanian: [[kirmėlė]] ''f''; [[kirminas]] ''m'' (also means insect larvae)
 *Polish: [[robak]]
 *Portuguese: [[verme]] ''m''
 *Russian: [[червь]] (červ') ''m''
