--- a/wiki/worm.wikitext
+++ b/wiki/worm.wikitext
@@ -30,6 +30,7 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Arabic: [[دودة|دُودَة]] (dúda) ''sg'', [[دود|دُودٌ]] (dúdun) ''pl''
 *[[Bosnian]]: [[crv]] ''m''
 *Bulgarian: [[червей]] (červej)
 *Catalan: [[cuc]] ''m''
