--- a/wiki/worm.wikitext
+++ b/wiki/worm.wikitext
@@ -5,31 +5,19 @@
 ===Noun===
 '''worm''' (plural: [[worms]])
 
-# A generally tubular invertebrate animal of the annelid phylum
-# A contemptible or devious person
-#: ''Don't try to run away, you little worm''
-# ''([[internet]])'' A [[self-replicating program]] which propagates widely through a network (''cf.'' [[virus]], [[Trojan Horse]]).
-
-====Related terms====
-* [[wormhole]]
-* [[wormwood]]
-* [[wormy]]
-* [[bookworm]]
-* [[earthworm]]
-* [[flatworm]]
-* [[ringworm]]
-* [[tapeword]]
-* [[woodworm]]
-* [[vermiform]]
-* [[fishing worm]]
+#A generally tubular [[invertebrate]] of the [[annelid]] [[phylum]].
+#A [[contemptible]] or devious person.
+#:''Don't try to run away, you little worm''
+#(''Internet'') A [[self-replicating program]] that propagates widely through a network.
 
 ====Translations====
 
-'''worm'''
+'''animal'''
 {| border=0  width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+<!--Put translations for languages from A to I here-->
 *Arabic: [[دودة|دُودَة]] (dúda) ''sg'', [[دود|دُودٌ]] (dúdun) ''pl''
 *[[Bosnian]]: [[crv]] ''m''
 *Bulgarian: [[червей]] (červej)
@@ -38,16 +26,17 @@
 *Czech:  [[červ]]
 *Dutch: [[worm#Dutch|worm]]
 *Finnish: [[mato]]
-*French: [[ver]] ''m'' (1,3)
+*French: [[ver]] ''m''
 *German: [[Wurm]] ''m''
 *Greek: [[σκώληξ]] (skólix) ''m''
 *Hungarian: [[kukac]]
+*Indonesian: [[cacing]]
+*Italian: [[verme]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Indonesian: [[cacing]]
-*Italian: [[verme]] ''m'' (1,2)
+<!--Put translations for languages from J to Z here-->
 *Japanese: [[虫]] ([[むし]], mushí)
 *Korean: [[벌레]] (beolle)
 *Lithuanian: [[kirmėlė]] ''f''; [[kirminas]] ''m'' (also means insect larvae)
@@ -60,14 +49,59 @@
 |}
 |}
 
-===Intransitive verb===
-'''to worm''' ([[wormed]], wormed)
+'''person'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
 
-# To move with ones body dragging the ground
-#: ''We wormed our way through the underbrush''
-# To gain access in an devious way
-#: ''He wormed his way into the organization''
+'''self-replicating program'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[ver]] ''m''
+*Italian: [[verme]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+===Intransitive verb===
+'''to worm''' ('''[[worming]]''', [[wormed]], wormed)
+
+#To move with one's body dragging the ground.
+#:''We wormed our way through the underbrush''
+#(''figuratively'') To get (into) an devious way.
+#:''He wormed his way into the organization''
+
+====Derived terms====
+*[[wormhole]]
+*[[wormwood]]
+*[[wormy]]
+*[[bookworm]]
+*[[earthworm]]
+*[[fishing worm]]
+*[[flatworm]]
+*[[ringworm]]
+*[[tapeworm]]
+*[[woodworm]]
 
 ===See also===
 *[[grub]]
 *[[maggot]]
+*[[Trojan horse]]
+*[[vermiform]]
+*[[virus]]
