--- a/wiki/worm.wikitext
+++ b/wiki/worm.wikitext
@@ -1,5 +1,5 @@
 ===Pronunciation===
-*wûrm, /wʒɜː(r)m/, /wZ3:(r)m/
+*wûrm, /wɜː(r)m/, /w3:(r)m/
 *:'''Rhymes''': [[Rhymes:English:-ɜː(r)m|-ɜː(r)m]]
 
 ===Noun===
