--- a/wiki/worm.wikitext
+++ b/wiki/worm.wikitext
@@ -29,6 +29,7 @@
 *French: [[ver]] ''m''
 *German: [[Wurm]] ''m''
 *Greek: [[σκώληξ]] (skólix) ''m''
+*Hebrew: [[תולע]] (tolah) ''m''
 *Hungarian: [[kukac]]
 *Indonesian: [[cacing]]
 *Italian: [[verme]] ''m''
@@ -39,6 +40,7 @@
 <!--Put translations for languages from J to Z here-->
 *Japanese: [[虫]] ([[むし]], mushí)
 *Korean: [[벌레]] (beolle)
+*Latin: [[vermis]] ''m''
 *Lithuanian: [[kirmėlė]] ''f''; [[kirminas]] ''m'' (also means insect larvae)
 *Polish: [[robak]]
 *Portuguese: [[verme]] ''m''
