--- a/wiki/despondence.wikitext
+++ b/wiki/despondence.wikitext
@@ -1,2 +1,2 @@
 ==Adjective==
-Marked by [[despondence]]; given to despondence; [[low-spirited]]; as, a despondent manner; a despondent [[prisoner]].
+Marked by despondence; given to despondence; [[low-spirited]]; as, a despondent manner; a despondent [[prisoner]].
