--- a/wiki/worm.wikitext
+++ b/wiki/worm.wikitext
@@ -57,11 +57,16 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*Arabic: [[شخص دنيء|شَخْصٌ دَنِيء]] (šáχʂun dániʔ) ''m''
+*German: [[elender]] ''m'', [[elendes Wurm]]  ''n''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Portuguese: [[miserável]] ''m and f'', [[desgraçado]] ''m''
+*Russian: [[стерва]] (stérva) ''m and f'', [[негодяй]] (negodjáj) ''m'', [[негодяйка]] (negodjájka) ''f''
+*Spanish: [[gusano]] ''m''
 |}
 |}
 
