--- a/wiki/king.wikitext
+++ b/wiki/king.wikitext
@@ -11,7 +11,7 @@
 #a playing piece in [[chess]] which can only move one square in any direction except when[[rooking]] in which it may move more as it exchanges directions with the "rook" or "castle" piece. When the king piece is threatened beyond movement of escape to capture it is called "[[checkmate]]", i.e. "the king is dead" and the game is over. The king piece cannot move into check.
 #a playing card with the image of a king on it.
 ====Translations====
-*{{ar}}: [[مالِك]] (ma:lik)
+*{{ar}}: [[مَلِكٌ]] (malik)
 *{{br}}: [[roue]] ''m'' rouaned / -ed ''pl'' (1,2,3)
 *{{ca}}: [[rei]] ''m''
 *{{zh}}: [[国王]] (guowang)
@@ -31,7 +31,7 @@
 *{{id}}: [[raja]]
 *{{ia}}: [[rege]]
 *{{it}}: [[re]] ''m'' (1, 2, 3)
-*{{ja}}: [[国王]] (こくおう, kokuō), [[王様]] (おうさま, ōsama)
+*{{ja}}: [[国王]] (こくおう, kokuō), [[王様]] (おうさま, ōsama), [[王]] (おう)
 *{{ko}}: [[임금]] (imgeum), [[왕]] [王] (wang)
 *{{la}}: [[rex]] ''m'' 
 *{{mnc}}: ([[wang]])
@@ -48,5 +48,6 @@
 *{{vi}}: [[Vua]], [[Vương]] [王]
 *{{vo}}: [[reg]], [[hireg]]
 *{{cy}}: [[brenin]]
+
 ====Related words====
 :[[queen]], [[viceroy]], [[emperor]], [[empress]], [[prince]], [[princess]], [[kingdom]], [[regent]]
