--- a/wiki/own.wikitext
+++ b/wiki/own.wikitext
@@ -8,6 +8,7 @@
 #: ''I have to own this problem.''
 
 ====Translations====
+*Arabic: [[مَلَكَ]]
 *Finnish: [[omistaa]]
 *French: [[posséder]]
 *German: [[besitzen]]
